<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="Enthalpie_r134a" Id="{9533a512-bc92-4e22-b706-843a041a1680}">
    <Declaration><![CDATA[TYPE Enthalpie_r134a :
STRUCT
	Temperatur: REAL;	//°C
	h1:			REAL; 	//kJ/kg
	h2:			REAL; 	//kJ/kg
	h3: 		REAL; 	//kJ/kg
	h4: 		REAL; 	//kJ/kg
	h5: 		REAL; 	//kJ/kg
	h6: 		REAL; 	//kJ/kg
	h7:			REAL; 	//kJ/kg
	h8: 		REAL; 	//kJ/kg
	h9: 		REAL; 	//kJ/kg
	h10:	 	REAL; 	//kJ/kg
	h11:		REAL; 	//kJ/kg
	h12:		REAL; 	//kJ/kg
	h13:	 	REAL; 	//kJ/kg
	h14: 		REAL; 	//kJ/kg
	h15: 		REAL; 	//kJ/kg
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>