<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <POU Name="DB_Lesen_Enthalpie_r134a" Id="{b0bfeeb1-0a07-4266-a8ee-51fbcbd4d562}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM DB_Lesen_Enthalpie_r134a
VAR
	
	DbArray_Enthalpie_r134a: ARRAY[0..200] OF ST_DB_Enthalpie_r134a;	

	FbDbLesen: FB_DBRecordArraySelect;
	sSelectString: STRING(800):= 'SELECT * FROM enthalpie_r134a';
	nRecIndex: UDINT;
	bStartStopSelect: BOOL;
	bBusySelect: BOOL;
	bErrorSelect: BOOL;
	stSQLStateSelect: TC2_DATABASE.ST_DBSQLError;
	nRecordCount: UDINT;
	Busy_Lesen:BOOL;
	start_Lesen:BOOL:=TRUE;
	Abgeschlossen: BOOL:= FALSE;
	ErrorId:UDINT;
	start_Schliessen:BOOL:=FALSE;
	Counter: UDINT:=0;
	
	pCmdAddr: UDINT;
	

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bNeuInitialisieren THEN
	Abgeschlossen := FALSE;
END_IF

//=========================================================================================	
//Die Enthalpiewerte von r134a werden abhängig vom Druck und Temperatur auslesen		

IF Abgeschlossen = FALSE THEN 
	FbDbLesen(
				sNetID:=, 
				hDBID:= 4, 
				pCmdAddr:= ADR(sSelectString), 
				cbCmdSize:= SIZEOF(sSelectString), 
				nStartIndex:= nRecIndex, 
				nRecordCount:=nRecordCount-1, 
				pDestAddr:= ADR(DbArray_Enthalpie_r134a), 
				cbRecordArraySize:= SIZEOF(DbArray_Enthalpie_r134a), 
				bExecute:= TRUE, 
				tTimeout:= T#15S,
				bBusy=> Busy_Lesen, 
				bError=> SM.bFehler, 
				nErrID=> ErrorId, 
				sSQLState=> stSQLStateSelect, 
				nRecords=> nRecordCount); 
	
	
	IF nRecordCount>0 THEN
		
		FOR counter:=0 TO nRecordCount-1 BY 1 DO
		
		(*Eintragen der Enthalpiewerte in das Array*)
			Enthalpie_r134a[counter-20].Temperatur :=	STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].Temperatur));
			Enthalpie_r134a[counter-20].h[10] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h1));
			Enthalpie_r134a[counter-20].h[15] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h1_5));
			Enthalpie_r134a[counter-20].h[20] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h2));
			Enthalpie_r134a[counter-20].h[25] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h2_5));
			Enthalpie_r134a[counter-20].h[30] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h3));
			Enthalpie_r134a[counter-20].h[35] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h3_5));
			Enthalpie_r134a[counter-20].h[40] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h4));
			Enthalpie_r134a[counter-20].h[45] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h4_5));
			Enthalpie_r134a[counter-20].h[50] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h5));
			Enthalpie_r134a[counter-20].h[55] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h5_5));
			Enthalpie_r134a[counter-20].h[60] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h6));
			Enthalpie_r134a[counter-20].h[65] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h6_5));
			Enthalpie_r134a[counter-20].h[70] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h7));
			Enthalpie_r134a[counter-20].h[75] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h7_5));
			Enthalpie_r134a[counter-20].h[80] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h8));
			Enthalpie_r134a[counter-20].h[85] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h8_5));
			Enthalpie_r134a[counter-20].h[90] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h9));
			Enthalpie_r134a[counter-20].h[95] :=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h9_5));
			Enthalpie_r134a[counter-20].h[100]:=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h10));
			Enthalpie_r134a[counter-20].h[105]:=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h10_5));
			Enthalpie_r134a[counter-20].h[110]:=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h11));
			Enthalpie_r134a[counter-20].h[115]:=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h11_5));
			Enthalpie_r134a[counter-20].h[120]:=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h12));
			Enthalpie_r134a[counter-20].h[125]:=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h12_5));
			Enthalpie_r134a[counter-20].h[130]:=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h13));
			Enthalpie_r134a[counter-20].h[135]:=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h13_5));
			Enthalpie_r134a[counter-20].h[140]:=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h14));
			Enthalpie_r134a[counter-20].h[145]:=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h14_5));
			Enthalpie_r134a[counter-20].h[150]:=		STRING_TO_REAL(PunktErsetztKomma(DbArray_Enthalpie_r134a[counter].h15));

		END_FOR
	END_IF
	
	
	IF Busy_Lesen=FALSE AND nRecordCount>0 THEN
		FbDbLesen(bExecute:= FALSE);
		Abgeschlossen:= TRUE;
	END_IF
END_IF]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>